<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Examples</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="choose_layout">Choose a layout</string>
    <string name="show_list">Show list</string>
    <string name="name">Name:</string>
    <string name="ability">Ability:</string>
    <string name="add">Add Superhero</string>
    <string name="action_test_sql">Test SQL</string>
    <string name="execute">Execute</string>
    <string name="statement_hint">Enter a SQL statement to execute...</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="action_test_services">Test Services</string>
    <string name="title_section1">Binder</string>
    <string name="title_section2">BroadcastReceiver</string>
    <string name="section">Section </string>
    <string name="start_binder_service">Start  service</string>
    <string name="stop_binder_service">Stop  service</string>
    <string name="hint_receiver_service">Enter a name</string>
    <string name="send_receiver_service">Send to service</string>
</resources>
