<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ExampleActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_switch_layout" android:title="@string/action_switch_layout"
        android:orderInCategory="101" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_show_list" android:title="@string/show_list"
        android:orderInCategory="102" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_test_sql" android:title="@string/action_test_sql"
        android:orderInCategory="103" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_test_service" android:title="@string/action_test_services"
        android:orderInCategory="103" app:showAsAction="ifRoom"/>
</menu>
