<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Superman"
        android:layout_toRightOf="@id/name"/>
    <TextView
        android:id="@+id/ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ability"
        android:layout_below="@id/edit_name"/>
    <EditText
        android:id="@+id/edit_ability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Flying"
        android:layout_toRightOf="@id/ability"
        android:layout_below="@id/edit_name"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ability"
        android:text="@string/add"/>
    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/add_button"
        android:layout_marginTop="20dp">
    </ListView>
</RelativeLayout>
